[package]
name = "wold"
version = "0.1.0"
edition = "2021"

[dependencies.anyhow]
version = "1.0.65"

[dependencies.axum]
version = "0.5.16"

[dependencies.serde]
version = "1.0.145"
features = ["derive"]

[dependencies.serde_bytes]
version = "0.11.7"

[dependencies.serde_json]
version = "1.0.87"

[dependencies.tokio]
version = "1.21.2"
features = ["macros", "net", "rt"]

[dependencies.tracing]
version = "0.1.36"

[dependencies.tracing-subscriber]
version = "0.3.15"
features = ["env-filter"]
