[package]
name = "wold"
version = "0.1.0"
edition = "2021"

[dependencies.anyhow]
version = "1.0.70"

[dependencies.axum]
version = "0.6.7"

[dependencies.serde]
version = "1.0.147"
features = ["derive"]

[dependencies.serde_bytes]
version = "0.11.9"

[dependencies.serde_json]
version = "1.0.95"

[dependencies.tokio]
version = "1.28.2"
features = ["macros", "net", "rt"]

[dependencies.tracing]
version = "0.1.37"

[dependencies.tracing-subscriber]
version = "0.3.16"
features = ["env-filter"]
